--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -10,11 +10,18 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
+    - uses: docker/login-action@v1
+      with:
+        username: ${{ secrets.DOCKERHUB_USERNAME }}
+        password: ${{ secrets.DOCKERHUB_TOKEN }}
     - uses: actions/checkout@v2
     - uses: actions/setup-java@v1.4.3
       with:
         java-version: 11
-    - name: Build JAR
+    - name: Build the JAR
       run: gradle build
-    - name: Build the Docker image
-      run: docker build . --tag avalarin/mission-control:latest --tag avalarin/mission-control:$(date +%s)
+    - name: Build the Docker image and push
+      uses: docker/build-push-action@v2
+      with:
+        push: true
+        tags: avalarin/mission-control:latest
