--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -12,15 +12,21 @@ jobs:
     steps:
     - uses: docker/login-action@v1
       with:
-        username: ${{ secrets.DOCKERHUB_USERNAME }}
+        username: ${{ github.repository_owner }}
         password: ${{ secrets.DOCKERHUB_TOKEN }}
     - uses: actions/checkout@v2
     - uses: actions/setup-java@v1.4.3
       with:
         java-version: 11
+    - name: Export env variables
+      run: |
+        export APP_VERSION=$(cat ./VERSION)
+        export IMAGE_PREFIX=${{ github.repository_owner }}/mission-control
+        export IMAGE_TAG_LATEST=$IMAGE_PREFIX:latest
+        export IMAGE_TAG=$IMAGE_PREFIX:$APP_VERSION
     - name: Build the JAR
       run: gradle build
     - name: Build the Docker image
-      run: docker build . --tag avalarin/mission-control:latest
+      run: docker build . --tag $IMAGE_TAG_LATEST --tag $IMAGE_TAG
     - name: Push the Docker image
-      run: docker push avalarin/mission-control:latest
+      run: docker push $IMAGE_TAG_LATEST $IMAGE_TAG
