Prepare for a quick start
Change-Id: Ic50abbd652bbe0ff5e1654ca7369903b4dd35578

--- a/spa/package.json
+++ b/spa/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "devops-mission-control-spa",
+  "name": "mission-control-spa",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -31,7 +31,7 @@
     "redux-thunk": "^2.3.0",
     "reselect": "^4.0.0"
   },
-  "proxy": "http://localhost:10000",
+  "proxy": "http://localhost:8080",
   "scripts": {
     "start": "react-scripts start",
     "lint": "yarn eslint src/**/*.js",
