--- a/src/main/resources/application-example.yml
+++ b/src/main/resources/application-example.yml
@@ -1,33 +1,34 @@
 server:
-  port: 10000
+  port: 8080
   address: 0.0.0.0
   max-http-header-size: 20480
+
+logging:
+  format: text
 
 mission-control:
   web:
     cors:
       allowed-origins:
-        - "https://mission-control.example.com"
+        - "*"
+        - "http://localhost"
 
     cookies:
-      domain: mission-control.example.com
-      secured: true
+      domain: localhost
+      secured: false
 
-    # LDAP Authentication
     auth:
-      type: LDAP
-      ldap:
-        url: 'ldaps://ldap.example.com:3269/'
-        searchFilter: '(&(objectClass=user)(sAMAccountName={0}))'
-        searchBase: 'OU=users,DC=example,DC=com'
-        readerUserName: 'reader-user-name'
-        readerPassword: ${secret.auth.ldap.reader_password}
-        rolePattern: 'MISSION-CONTROL-.*'
+      type: IN_MEMORY
+      in-memory:
+        users:
+          - name: admin
+            password: admin
+            roles: ROLE_READER, ROLE_ADMIN
 
     tokens:
       default-lifetime-seconds: 864000
       issuer: mission-control
-      secret: ${secret.web-tokens.jwt_sign_secret:}
+      secret: development-environment-jwt-secret
 
     anonymous:
       roles: ROLE_ANONYM
@@ -48,27 +49,18 @@ mission-control:
       directory: /opt/mission-control-spa/
     config:
       site:
+        metrics:
+          yandex-metrika:
+            enable: false
+            account: 0
         features:
           show_login_button: false
           show_deployment_endpoints: true
 
-  # Get Kubernetes tokens from Vault storage
-  tokens-source:
-    type: vault
-    vault:
-      path: 'secret/applications/devops/devops-mission-control'
-      keyTemplate: 'secret.clusters.(.*).token'
-
-  # Configure clusters
-  clusters:
-    - name: testing
-      displayName: "TESTING A"
-      host: "https://kubernetes.testing.example.com:6443"
-      dc: "datacenter-name"
-    - name: prod
-      displayName: "PROD A"
-      host: "https://kubernetes.production.example.com:6443"
-      dc: "datacenter-name"
+  clusters-source:
+    type: kubeconfig
+    kubeconfig:
+      path: "~/.kube/config"
 
 spring:
   cloud:
